kubernetes/apps/services/kubewings/app/deployment.yaml
# yaml-language-server: $schema=https://k8s-schemas.pages.dev/kubernetes/apps/v1/deployment.json
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubewings
  namespace: services
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: kubewings
  template:
    metadata:
      labels:
        app.kubernetes.io/name: kubewings
        app.kubernetes.io/managed-by: kubewings
        app.kubernetes.io/component: gateway
    spec:
      serviceAccountName: kubewings
      securityContext:
        runAsNonRoot: true
        runAsUser: 10000
        runAsGroup: 10000
        fsGroup: 10000
        fsGroupChangePolicy: OnRootMismatch
        seccompProfile:
          type: RuntimeDefault
      containers:
      - name: gateway
        image: ghcr.io/thezoo-house/kubewings@sha256:6139c97aeb5e896241cdb9377173a6f25c21b7c56c2d94e70181b2142698b822
        imagePullPolicy: IfNotPresent
        ports:
        - name: http
          containerPort: 8080
        startupProbe:
          tcpSocket:
            port: http
          periodSeconds: 5
          timeoutSeconds: 2
          failureThreshold: 60
        livenessProbe:
          tcpSocket:
            port: http
          periodSeconds: 10
          timeoutSeconds: 2
          failureThreshold: 3
        readinessProbe:
          tcpSocket:
            port: http
          periodSeconds: 5
          timeoutSeconds: 2
          failureThreshold: 3
        securityContext:
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
          capabilities:
            drop: ["ALL"]
        resources:
          requests:
            cpu: 25m
            memory: 64Mi
          limits:
            memory: 256Mi
