kubernetes/apps/services/kubewings/app/service.yaml
# yaml-language-server: $schema=https://k8s-schemas.pages.dev/kubernetes/v1/service.json
apiVersion: v1
kind: Service
metadata:
  name: kubewings
  namespace: services
spec:
  selector:
    app.kubernetes.io/name: kubewings
  ports:
  - name: http
    port: 80
    targetPort: http
