kubernetes/apps/services/kubewings/app/admission.yaml
# yaml-language-server: $schema=https://k8s-schemas.pages.dev/kubernetes/admissionregistration.k8s.io/v1/validatingadmissionpolicy.json
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicy
metadata:
  name: kubewings-runtime-namespace
spec:
  failurePolicy: Fail
  matchConstraints:
    resourceRules:
    - apiGroups:
      - kubewings.maudeco.de
      apiVersions:
      - v1alpha1
      operations:
      - CREATE
      - UPDATE
      resources:
      - kubegameservers
      - kubegameserveroperations
  validations:
  - expression: request.namespace == 'kubewings-mvp'
    message: KubeWings runtime resources must be in the dedicated kubewings-mvp namespace
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: kubewings-runtime-namespace
spec:
  policyName: kubewings-runtime-namespace
  validationActions:
  - Deny
